<resources>
    <string name="app_name">FSP-AMU</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password*</string>
    <string name="fpwd">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="signup">Not a member? Sign up</string>
    <string name="name">Name*</string>
    <string name="signupp">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="otherloginoptions">Other Login Options</string>
    <string name="ok">OK</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign up!</string>
    <string name="last_name">Last Name</string>
    <string name="faculty_employee_number">Faculty/Employee Number</string>
    <string name="provost">Provost</string>
    <string name="dean">Dean</string>
    <string name="student">Student</string>
    <string name="my_forms">My Forms</string>
    <string name="all_forms">All Forms</string>
    <string name="current_submissions">Current Submissions</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>

</resources>
