<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myforms"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/my_forms" />
        <item
            android:id="@+id/nav_allforms"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/all_forms" />


    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/my_profile" />
    </group>
</menu>
