<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="ClickHandlers"
            type="com.sg.formsubmissionportal_androidclient.ui.SignupActivity.ClickHandlers"/>
    </data>
    <ScrollView
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewProfilePictureFaculty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:baselineAligned="true"
                android:padding="48dp"
                android:src="@drawable/amulogo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_marginTop="@dimen/dimen_16x"
                android:id="@+id/textViewInfo"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/dimen_4x"
                android:textSize="@dimen/text_32x"
                android:fontFamily="@font/new_rocker"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="49dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:paddingLeft="@dimen/dimen_32x"
                android:paddingTop="@dimen/dimen_16x"
                android:paddingRight="@dimen/dimen_32x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dimen_32x"
                android:paddingTop="@dimen/dimen_16x"
                android:paddingRight="@dimen/dimen_32x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_idno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dimen_32x"
                android:paddingTop="@dimen/dimen_16x"
                android:paddingRight="@dimen/dimen_32x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idNoTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:hint="@string/faculty_employee_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dimen_32x"
                android:paddingTop="@dimen/dimen_16x"
                android:paddingRight="@dimen/dimen_32x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_16x"
                android:textSize="@dimen/text_16x"
                android:layout_height="wrap_content"
                android:fontFamily="@font/trade_winds"
                android:text="Choose role:" />
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/dimen_8x"
                android:checkedButton="@id/radio1">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dean" />
                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/provost" />
            </RadioGroup>


            <Button
                android:id="@+id/signupbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_64x"
                android:layout_marginTop="@dimen/dimen_16x"
                android:layout_marginRight="@dimen/dimen_64x"
                android:layout_marginBottom="@dimen/dimen_16x"
                android:onClick="@{ClickHandlers::onSignUpButtonClicked}"
                android:background="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:hint="@string/signupp"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />



        </LinearLayout>
    </ScrollView>
</layout>
